fix tooltips in LHS by truncating wrapper instead

--- a/sass/layout/_sidebar-left.scss
+++ b/sass/layout/_sidebar-left.scss
@@ -1253,6 +1253,12 @@ $sidebarOpacityAnimationDuration: 0.15s;
         overflow: hidden;
         flex-grow: 1;
     }
+    .SidebarChannelLinkLabel_wrapper > div.truncated {
+        display: block;
+        width: 100%;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
 
     .DirectChannel__profile-picture {
         height: 20px;
